# rust_mvc

./: .gitignore  Cargo.toml
migrations/2022-05-14-181206_create_users/: up.sql
migrations/2022-05-15-092727_create_products/: up.sql
src/: db_pool.rs  guards.rs  main.rs  schema.rs
src/models/: mod.rs  product.rs  user.rs
src/routes/: auth.rs  index.rs  mod.rs  products.rs  users.rs
templates/: base.html.tera  index.html.tera  login.html.tera  products_cart.html.tera  products_edit.html.tera  products_list.html.tera  products_new.html.tera  register.html.tera  users_edit.html.tera  users_list.html.tera
