[package]
name = "list21"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["secrets", "json"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.0.0-rc.0", features = ["r2d2", "sqlite"] }
dotenv = { version = "0.15.0" }
sha2 = { version = "0.10.2" }
locale = { version = "0.2.2" }
